# essence-of-AI-engineering

./: .gitignore  AI-Agent.md  AgentPlanAndExecute.py  AgentReAct.py  README.md  __init__.py  env_template  llm_chat.py  llm_chat.sh  prompt_safe.md  pyproject.toml
ai_base/: agent_base.py  constants.py  llm_base.py  prompt_base.py  rag_base.py
ai_base/agent_types/: react.py
cli/: AgentPlanAndExecute.py  AgentReAct.py  agent_chat.py  agent_chats.py  agent_story.py  ai_clean_messages.py  ai_clean_sessions.py  ai_delete_session.py  ai_list_sessions.py  ai_retrieve_messages.py  llm_chat.py  llm_chats.py
context/: ctx_manager.py  ctx_safe.py  token.py
context/chat_history_manager/: __base.py  sql.py
docker/: Dockerfile  README.md
llm/: plan-20251026.md  text.md
logger/: base_logger.py  log_chat.py  log_rag.py
prompt_hub/: prompt_tool.py  readme.md
rag/: __init__.py  pyproject.toml
rag/idea_for_abstract/_ai_generation/rag/rag_server/: pyproject.toml  rag_server.py  start_rag_server.sh  stop_rag_server.sh
rag_abstract/: plan-20251018.md  rag_database.md  rag_server.md  run.sh  text.md  txt_prepare.md
rag_traditional/: README.md  abstract.py  chunk.py  embedding.py  installer.md  pyproject.toml  query.py
src/: __init__.py
tests/: __init__.py
tools/: __init__.py  agent_tool.py  cmd_tool.py  ctx_tool.py  file_tool.py  story_tool.py  time_tool.py
utils/: db_tool.py  env_tool.py  file_tool.py  format_tool.py  hash_tool.py  json_tool.py  module_tool.py  print_tool.py  text_tool.py  thread_local_tool.py  time_tool.py
voice/: pyproject.toml  run.sh
(+119 files in other folders)
