[project]
name = "essence-of-ai-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chardet>=5.2.0",
    "dotenv>=0.9.9",
    "openai>=2.3.0",
    "pip>=25.2",
    "simplejson>=3.20.2",
    "tiktoken>=0.12.0",
]

[tool.uv.workspace]
members = [
    "voice",
    "rag_server",
]
