[project]
name = "rag-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.2.1",
    "fastapi>=0.120.0",
    "pytest>=8.4.2",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.2",
    "torch>=2.9.0",
    "uvicorn>=0.38.0",
]
